# xphasepro

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/mk/xphasepro_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/init/directory/: app_directory.dart  temp_directory.dart
example/lib/init/enum/: camera_actions.dart
ios/: xphasepro.podspec
ios/Classes/: xphasepro.c
ios/PanoMakerPro.framework/: Info.plist
ios/PanoMakerPro.framework/Headers/: DPPanoMakerProDLLMain.h  PanoMakerPro.h  turbojpeg.h
ios/PanoMakerPro.framework/Modules/: module.modulemap
lib/: xphasepro.dart  xprhasepro.g.dart
lib/init/constants/: app_constants.dart
lib/init/network/: connect.dart  protocols.dart
lib/init/network/enum/: network_routes_path.dart  request_type.dart
lib/init/utils/: helper.dart  type_converter.dart  xphasepro_bridge.dart
src/: CMakeLists.txt  xphasepro.c  xphasepro.cpp
src/PanoMaker/: DPPanoMakerProDLLMain.h
